<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bluetooth.BluetoothListActivity"
    android:orientation="vertical">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paired_devices"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4sp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bluetooth_paired_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/bluetooth_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:nestedScrollingEnabled="false"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/found_devices"
                    android:paddingHorizontal="12dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="4sp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bluetooth_found_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/bluetooth_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:nestedScrollingEnabled="false"/>

                <LinearLayout
                    android:id="@+id/bluetooth_off_warn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="50dp"
                    android:gravity="center"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bluetooth_off_warning"
                        android:gravity="center"
                    />
                    <Button
                        android:id="@+id/turn_bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/turn_on"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>
